# owen

./: Cargo.toml  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/: arragement.rs  buffer.rs  cell.rs  event.rs  frame.rs  lib.rs  terminal.rs  window.rs
src/backend/: crossterm.rs  event.rs  mod.rs
src/widget/: mod.rs  text.rs
